<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">androipoint</string>
    <string name="pre_login" translatable="false">PRE LOGIN</string>
    <string name="pre_deviceid" translatable="false">PRE DEVICE ID</string>
    <string name="pre_uid" translatable="false">PRE USER ID</string>
    <string name="pre_currnt_trip_type" translatable="false">PRE CURRENT TRIP TYPE</string>
    <string name="pre_didType1" translatable="false">PRE DID1</string>
    <string name="pre_didType2" translatable="false">PRE DID2</string>
    <string name="pre_date" translatable="false">PRE DATE</string>
    <string name="driverName" translatable="false">DriverName</string>
    <string name="driverPhoneNumber" translatable="false">DriverPhoneNumber</string>
    <string name="schoolName" translatable="false">SchoolName</string>
    <string name="speedLimit" translatable="false">SpeedLimit</string>
    <string name="Capacity_2" translatable="false">Capacity_2</string>
    <string name="dtidFirst" translatable="false">dtidFirst</string>
    <string name="dtidSecond" translatable="false">dtidSecond</string>
    <string name="taylor_albert_johanson">Taylor Albert Johanson</string>
    <string name="class_2">Class 2</string>
    <string name="_50">50%</string>
    <string name="commission">COMMISSION</string>
    <string name="UPLOAD_PHOTO">UPLOAD PHOTO</string>
    <string name="In_this_Photo_must_have_include_Driver_and_Students">*In this Photo must have include Driver and Students</string>
    <string name="driverTransportation_feesForPDF" translatable="false">DRIVER TRANSPORTATION FEES</string>
    <string name="driver_name" tools:ignore="MissingTranslation">Driver Name :</string>
    <string name="phone_number_for_pdf" translatable="false">Phone Number : </string>
    <string name="school" translatable="false">School : </string>
    <string name="totalTransportation_fees" translatable="false">Total Transportation fees :</string>
    <string name="month" translatable="false">Month : </string>
    <string name="studentName" translatable="false">Student Name</string>
    <string name="attendancePer" translatable="false">Attendance %</string>
    <string name="shortcut_start">Start service</string>
    <string name="shortcut_stop">Stop service</string>
    <string name="shortcut_sos">Send SOS</string>
    <string name="channel_default">Primary Channel</string>
    <string name="settings_id_title">Device identifier</string>
    <string name="settings_url_title">Server URL</string>
    <string name="settings_url_summary">Tracking server URL</string>
    <string name="settings_interval_title">Frequency</string>
    <string name="settings_interval_summary">Reporting interval in seconds</string>
    <string name="settings_distance_title">Distance</string>
    <string name="settings_distance_summary">Reporting distance in meters</string>
    <string name="settings_angle_title">Angle</string>
    <string name="settings_angle_summary">Reporting angle in degrees</string>
    <string name="settings_status_title">Service status</string>
    <string name="settings_status_off">Start</string>
    <string name="settings_status_on">Stop</string>
    <string name="settings_status_off_summary">Service stopped</string>
    <string name="settings_status_on_summary">Service running</string>
    <string name="settings_accuracy_title">Location accuracy</string>
    <string name="settings_accuracy_summary">Desired location accuracy</string>
    <string name="settings_accuracy_high">High</string>
    <string name="settings_accuracy_medium">Medium</string>
    <string name="settings_accuracy_low">Low</string>
    <string name="menu_status">Status</string>
    <string name="menu_about">About</string>
    <string name="menu_clear">Clear</string>
    <string name="about_description">Real time GPS tracker for Android devices. Compatible with Traccar Server and other tracking systems.</string>
    <string name="about_license">This application is free and open source, source code is licensed under Apache License Version 2.0 and available on GitHub.</string>
    <string name="about_web">For more information visit\nwww.traccar.org/client</string>
    <string name="status_service_create">Service started</string>
    <string name="status_service_destroy">Service stopped</string>
    <string name="status_send_success">Send successfully</string>
    <string name="status_send_fail">Send failed</string>
    <string name="status_location_update">Location update</string>
    <string name="status_connectivity_change">Connectivity change</string>
    <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (TRACCAR).</string>
    <string name="error_msg_invalid_url">Please enter a valid http:// or https:// URL</string>
    <string name="otp_desc">Enter the 6 digit code sent to you at on your mobile phone</string>
    <string name="enter_driver_code">Enter driver code</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="no_network_connection_toast">no connection found</string>
    <string name="loading">Please wait</string>
    <string name="download_gujarti_vp">Please Download Gujarati Voice Package</string>
    <string name="trip">Trip</string>
    <string name="principal">N.M zala(Principal)</string>
    <string name="Send_SOS_Alert">Send SOS Alert</string>
    <string name="TRIP">TRIP</string>
    <string name="ATTENDANCE">ATTENDANCE</string>
    <string name="ATTENDANCE_PER">ATTENDANCE(%)</string>
    <string name="ROUTE_OPT">ROUTE OPT.</string>
    <string name="version">Version</string>
    <string name="attendance">Attendance</string>
    <string name="attendanceForPDF" translatable="false">Attendance</string>
    <string name="attendance_history">Attendance History</string>
    <string name="profile">Profile</string>
    <string name="route_optimization">Route Optimization</string>
    <string name="transportationReport">Transportation fees Report</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="class_4">Class 4</string>
    <string name="school_id">School ID:</string>
    <string name="maintenance"> Maintenance</string>
    <string name="App_is_under_Maintenance"> App is under Maintenance</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="vehicle_details">VEHICLE DETAILS</string>
    <string name="your_morning_trip_is_started">Home to School Trip is Started</string>
    <string name="home_to_school_1">TRIP 01: Home to School</string>
    <string name="school_to_home_1">TRIP 02: School to Home</string>
    <string name="home_to_school_2">TRIP 03: Home to School</string>
    <string name="school_to_home_2">TRIP 04: School to Home</string>
    <string name="your_upcoming_student">YOUR UPCOMING STUDENT</string>
    <string name="the_weekend">The Weekend</string>
    <string name="pick_student">Picked-up</string>
    <string name="please_confirm_student_attendance_before_end_trip">Please confirm Student Attendance Before End Trip</string>
    <string name="out_of">Out of</string>
    <string name="start_trip">Start Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="trip_01">Trip 01</string>
    <string name="trip_2">Trip 02</string>
    <string name="home_to_school">HOME TO SCHOOL</string>
    <string name="school_to_home">SCHOOL TO HOME</string>
    <string name="sos">SOS</string>
    <string name="gps_setting">GPS is Enable ?</string>
    <string name="gps_not_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="setting">Settings</string>
    <string name="blant_not_allow">Blank not allow!</string>
    <string name="otp_not_match">OTP was not match…</string>
    <string name="code_wrong">Code is wrong!</string>
    <string name="sorry_firststarttrip">Sorry, First start the trip.</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want logout?</string>
    <string name="logout">Logout</string>
    <string name="students_count">Students</string>
    <string name="pick_students_count">Picked-up:</string>
    <string name="start">START</string>
    <string name="trip_started_02">STARTED \n TRIP 02</string>
    <string name="add_driver">Add Driver</string>
    <string name="reason_for_leave">Reason for Leave</string>
    <string name="end">END</string>
    <string name="Enter_driver_details">Enter driver details</string>
    <string name="trip1_attendance">Trip 01 Attendance</string>
    <string name="report">REPORTS</string>
    <string name="REPORTS">REPORTS</string>
    <string name="SOS">SOS</string>
    <string name="spoil">Spoil</string>
    <string name="call_now">Call Now</string>
    <string name="PROFILE">PROFILE</string>
    <string name="My_Profile">My Profile</string>
    <string name="Choose_lang">Choose Language</string>
    <string name="save">SAVE</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="first_select_date">First Select Date</string>
    <string name="now_you_can_arrange_student">Now you can arrange student!</string>
    <string name="done">Done</string>
    <string name="rearrange">Rearrange</string>
    <string name="successfully_arranged_student">Successfully arranged the student!</string>
    <string name="number_not_available">Number is not available!</string>
    <string name="go">Go</string>
    <string name="name">Name</string>
    <string name="identifier">Identifier</string>
    <string name="school_name">School Name</string>
    <string name="driver_details">Driver Details :</string>
    <string name="contact_number">Contact Number</string>
    <string name="alternet_contact_number">Alternet Contact Number</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="licence_number">Licence Number</string>
    <string name="pan_number">PAN Number</string>
    <string name="vehical_details">Vehicle Details :</string>
    <string name="vehical_category">Vehicle Category</string>
    <string name="vehical_model">Vehicle Model</string>
    <string name="vehical_capacity">Vehicle Capacity</string>
    <string name="vehical_number">Vehicle Number</string>
    <string name="vehical_type">Vehicle Type</string>
    <string name="emergency_contact_details">Emergency contact details</string>
    <string name="please_approve_permission">Please approve permission</string>
    <string name="login">Login</string>
    <string name="language">Language</string>
    <string name="bus_tracking_system">Bus Tracking System</string>
    <string name="select_date">Select date</string>
    <string name="morning_trip">Morning Trip</string>
    <string name="noon_trip">Noon Trip</string>
    <string name="ADD_DRIVER">ADD DRIVER</string>
    <string name="trip_started">Trip \n Started</string>
    <string name="trip_ended">Trip Ended</string>
    <string name="total_amount">Total Amount : </string>
    <string name="Trip_01_Total_Amount">Trip 01 Total Amount</string>
    <string name="are_sure_you_want_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="transportationfeesRs" translatable="false">Transportation fees Rs.</string>
    <string name="About__US">About US</string>
    <string name="FeedBack">FeedBack</string>
    <string name="Android_Studio_Point">Android Studio Point</string>
    <string name="Devloper">Devloper</string>
    <string name="Social_Media">Social Media</string>
    <string name="Android_Alians">Android_Alians</string>
    <string name="Follow_me_on">Follow me on...</string>
    <string name="To">To:</string>
    <string name="Email_Address">Email Address</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message:</string>
    <string name="SEND">SEND</string>
    <string name="Type_your_message_here">Type_your_message_here....:</string>
</resources>