<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Feedback"
    android:orientation="vertical">


        <LinearLayout
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/student_attendance"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="2dp"
                android:padding="7dp"
                android:src="@drawable/arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:text="@string/FeedBack"
                android:textColor="#03A9F4"
                android:includeFontPadding="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/drawer">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="20dp"
                        android:padding="7dp"
                        android:background="@color/offwhite"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/To"
                            android:layout_gravity="center_vertical"
                            android:textStyle="bold"
                            android:textColor="@color/blackalpha"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/boder_sos"
                        android:layout_marginEnd="10dp"
                        android:padding="7dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Email_Address"
                            android:gravity="clip_vertical"
                            android:textSize="14sp"
                            android:inputType="textEmailAddress"
                            android:textColor="#333333"
                            android:scrollbars="vertical"
                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/offwhite"
                        android:layout_marginEnd="10dp"
                        android:padding="7dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/Subject"
                            android:layout_gravity="center_vertical"
                            android:textStyle="bold"
                            android:textColor="@color/blackalpha"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="7dp"
                        android:background="@drawable/boder_sos"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Subject"
                            android:gravity="clip_vertical"
                            android:textSize="14sp"
                            android:textColor="#333333"
                            android:scrollbars="vertical"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/offwhite"
                        android:layout_marginEnd="10dp"
                        android:padding="7dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/Message"
                            android:layout_gravity="center_vertical"
                            android:textStyle="bold"
                            android:textColor="@color/blackalpha"
                            android:textSize="16sp" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:padding="7dp"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/message"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:padding="10dp"
                            android:gravity="clip_vertical"
                            android:hint="@string/Type_your_message_here"
                            android:textSize="14sp"
                            android:textColor="#333333"
                            android:background="@drawable/boder_sos"
                            android:overScrollMode="always"
                            android:scrollbarStyle="insideInset"
                            android:scrollbars="vertical"
                            />

                    </LinearLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sendBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/message"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="22dp"
                        android:background="@drawable/button_bg"
                        android:backgroundTint="@color/button"
                        android:gravity="center"
                        android:layout_marginBottom="50dp"
                        android:text="@string/SEND"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

        </ScrollView>

    </LinearLayout>