<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AboutUs">

    <LinearLayout
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyblue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aboutus_back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="2dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="6dp"
            android:src="@drawable/back_detail_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/About__US"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/feedback_bg_button"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_about" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical|center_horizontal|center">

            <ImageView
                android:id="@+id/insta_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/instaicon" />

            <ImageView
                android:id="@+id/youtube_btn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/youtubeicon" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/drawer"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/offwhite"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:id="@+id/total_amount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:text="@string/Android_Studio_Point"
                            android:textColor="@color/logouttext"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/offwhite"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:text="@string/version"
                            android:textColor="@color/logouttext"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/version_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="50dp"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center"
                            android:text="2"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/offwhite"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:text="@string/Devloper"
                            android:textColor="@color/logouttext"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="50dp"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center"
                            android:text="Android Alians"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/offwhite"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:includeFontPadding="false"
                            android:text="@string/Social_Media"
                            android:textColor="@color/logouttext"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center"
                            android:text="@string/Android_Alians"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/more_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:text="@string/Follow_me_on"
                        android:textColor="@color/alphaback"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal|center">

                        <ImageView
                            android:id="@+id/apoint_link"
                            android:layout_width="100dp"
                            android:layout_height="120dp"
                            android:clickable="true"
                            android:src="@drawable/apoint_app_link" />

                        <ImageView
                            android:id="@+id/lenuguage_link"
                            android:layout_width="100dp"
                            android:layout_height="120dp"
                            android:clickable="true"
                            android:src="@drawable/lenguage_app_link" />

                        <ImageView
                            android:id="@+id/recipe_link"
                            android:layout_width="100dp"
                            android:layout_height="120dp"
                            android:clickable="true"
                            android:src="@drawable/recipe_app_link" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Thank You"
                        android:textColor="@color/alphaback"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>